@@ -1,1 +1,1 @@
-DIST mpv-0.1.4.tar.gz 1650525 SHA256 ec4a6093b33ed00d3f64a97e2eabbbf45b8e511929c98f3b8043f5effbe8cae7 SHA512 a462bba4f0f1f0394f040877e99d9dd1d5b26f031b5ee6db0cf3f00fb124527d65f2a6d9ef64e8e144c68a5cab92aeaaee75a6321f9024c505ae150f24def991 WHIRLPOOL 332e1449d2ebfdcc87313022df73606ed692e994719e49e5c0540a64ac4d5261ef1cfcef14cb432305d66b42bb695beba2b1e27110461e6259c6ae5f6af203bc
+DIST mpv-0.1.7.tar.gz 1651651 SHA256 989cb7518baf3ee641748bf1f7f335cf68730943b0dd77490170a5ceb36a63e1 SHA512 17a9a98f4cf47f604851cedd74bb86f8b3d6553b1906d198bcc430419b27cf038729b091df318c6db3fbf4b64f40758c4f79da7212c585d878aff77a25105790 WHIRLPOOL 21ea955e0e212536ae7e76c2f03bdc057b4cf4c4214df80ea9ab8ec6f6ffcae1fa4cdb4bb7f6ece85aa6c0a4430c2d0255f79bf9bec51ad919c508c7fdcdafb7
