@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
+<maintainer>
+	<email>nikoli@gmx.us</email>
+</maintainer>
 <herd>video</herd>
-<maintainer>
-	<email>media-video@gentoo.org</email>
-</maintainer>
-<maintainer>
-	<email>nikoli@lavabit.com</email>
-	<description>Maintainer. Assign bugs to him</description>
-</maintainer>
+<herd>proxy-maintainers</herd>
 <use>
 	<flag name="bluray">Enable playback of Blu-ray filesystems</flag>
 	<flag name="bs2b">Enable Bauer stereophonic-to-binaural headphone filter</flag>
 	<flag name="cdio">Use libcdio for CD support (instead of cdparanoia)</flag>
+	<flag name='doc-pdf'>Build documentation in pdf format</flag>
 	<flag name="enca">Enables support for charset discovery and conversion using <pkg>app-i18n/enca</pkg></flag>
 	<flag name="libguess">Enables support for charset discovery and conversion using <pkg>app-i18n/libguess</pkg></flag>
 	<flag name="mng">MNG input support</flag>
