@@ -18,16 +18,16 @@ LICENSE="GPL-3"
 SLOT="0"
 [[ ${PV} == *9999* ]] || \
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux"
-IUSE="+alsa aqua bluray bs2b +cdio dvb +dvd +enca encode +iconv jack joystick
+IUSE="+alsa bluray bs2b +cdio doc-pdf dvb +dvd +enca encode +iconv jack joystick
 jpeg ladspa lcms +libass libcaca libguess lirc mng +mp3 -openal +opengl oss
-portaudio +postproc pulseaudio pvr +quvi radio samba +shm +threads vaapi v4l
+portaudio +postproc pulseaudio pvr +quvi radio samba +shm +threads v4l vaapi
 vcd vdpau vf-dlopen wayland +X xinerama +xscreensaver +xv"
 
 REQUIRED_USE="
 	enca? ( iconv )
 	lcms? ( opengl )
 	libguess? ( iconv )
-	opengl? ( || ( aqua wayland X ) )
+	opengl? ( || ( wayland X ) )
 	portaudio? ( threads )
 	pvr? ( v4l )
 	radio? ( v4l || ( alsa oss ) )
@@ -52,7 +52,7 @@ RDEPEND+="
 		x11-libs/libXxf86vm
 		opengl? ( virtual/opengl )
 		lcms? ( media-libs/lcms:2 )
-		vaapi? ( x11-libs/libva )
+		vaapi? ( x11-libs/libva[X(+)] )
 		vdpau? ( x11-libs/libvdpau )
 		xinerama? ( x11-libs/libXinerama )
 		xscreensaver? ( x11-libs/libXScrnSaver )
@@ -105,6 +105,12 @@ DEPEND="${RDEPEND}
 	virtual/pkgconfig
 	>=dev-lang/perl-5.8
 	dev-python/docutils
+	doc-pdf? (
+		dev-texlive/texlive-latex
+		dev-texlive/texlive-latexrecommended
+		dev-texlive/texlive-latexextra
+		dev-tex/xcolor
+	)
 	X? (
 		x11-proto/videoproto
 		x11-proto/xf86vidmodeproto
@@ -174,6 +180,7 @@ src_configure() {
 	use quvi || myconf+=" --disable-libquvi4 --disable-libquvi9"
 	use samba || myconf+=" --disable-smb"
 	use lirc || myconf+=" --disable-lirc --disable-lircc"
+	use doc-pdf || myconf+=" --disable-pdf"
 
 	########
 	# CDDA #
@@ -262,11 +269,6 @@ src_configure() {
 	use lcms || myconf+=" --disable-lcms2"
 	use xscreensaver || myconf+=" --disable-xss"
 
-	############################
-	# OSX (aqua) configuration #
-	############################
-	use aqua && myconf+=" --enable-macosx-bundle"
-
 	CFLAGS= LDFLAGS= ./configure \
 		--cc="$(tc-getCC)" \
 		--extra-cflags="${CFLAGS}" \
@@ -276,6 +278,7 @@ src_configure() {
 		--bindir="${EPREFIX}"/usr/bin \
 		--confdir="${EPREFIX}"/etc/${PN} \
 		--mandir="${EPREFIX}"/usr/share/man \
+		--docdir="${EPREFIX}"/usr/share/doc/${PF} \
 		--localedir="${EPREFIX}"/usr/share/locale \
 		${myconf} || die
 
